--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint": "^8.48.0"
   },
   "engines": {
-    "node": "~12.10.0",
-    "npm": "~6.10.3"
+    "node": "~18.x",
+    "npm": "~8.19.2"
   }
 }
