--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "node server.js",
     "dev": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build",
-    "heroku-postbuild": "ng build"
+    "heroku-postbuild": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
